[metadata]
# replace with your username:
name = olpy
version = 1.0.1
author = Boladji Vinny
author_email = vinny.adjibi@outlook.com
description = An online machine learning package for Python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/boladjivinny/olpy
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
include_package_data = True
packages = find:
python_requires = >=3.6

[options.package_data]
* = a1a*, svmguide*
