[metadata]
# replace with your username:
name = olpy
version = 1.0.0.dev1
author = Boladji Vinny
author_email = vinny.adjibi@outlook.com
description = An online machine learning package for Python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/boladjivinny/olpy
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
include_package_data = True
packages = find:
python_requires = >=3.6
install_requires =
    numpy>=1.20.1
    pandas>=1.1.3
    scikit-learn>=0.24.1

[options.package_data]
* = a1a*, svmguide*
